@@ -23,9 +23,6 @@ import java.util.TreeSet;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.openmrs.api.ReportService;
-import org.openmrs.cohort.CohortDefinition;
-import org.openmrs.report.EvaluationContext;
 import org.simpleframework.xml.Attribute;
 import org.simpleframework.xml.Element;
 import org.simpleframework.xml.ElementList;
@@ -53,10 +50,6 @@ public class Cohort extends BaseOpenmrsData implements Serializable {
 	private String description;
 	
 	private Set<Integer> memberIds;
-	
-	private CohortDefinition cohortDefinition;
-	
-	private EvaluationContext evaluationContext;
 	
 	public Cohort() {
 		memberIds = new TreeSet<Integer>();
@@ -159,7 +152,7 @@ public class Cohort extends BaseOpenmrsData implements Serializable {
 		this();
 		for (StringTokenizer st = new StringTokenizer(commaSeparatedIds, ","); st.hasMoreTokens();) {
 			String id = st.nextToken();
-			memberIds.add(new Integer(id.trim()));
+			memberIds.add(Integer.valueOf(id.trim()));
 		}
 	}
 	
@@ -326,42 +319,6 @@ public class Cohort extends BaseOpenmrsData implements Serializable {
 	@ElementList(required = true)
 	public void setMemberIds(Set<Integer> memberIds) {
 		this.memberIds = memberIds;
-	}
-	
-	/**
-	 * @return the cohortDefinition
-	 */
-	@Element(required = false)
-	@Deprecated
-	public CohortDefinition getCohortDefinition() {
-		return cohortDefinition;
-	}
-	
-	/**
-	 * @param cohortDefinition the cohortDefinition to set
-	 */
-	@Element(required = false)
-	@Deprecated
-	public void setCohortDefinition(CohortDefinition cohortDefinition) {
-		this.cohortDefinition = cohortDefinition;
-	}
-	
-	/**
-	 * @return the evaluationContext
-	 */
-	@Element(required = false)
-	@Deprecated
-	public EvaluationContext getEvaluationContext() {
-		return evaluationContext;
-	}
-	
-	/**
-	 * @param evaluationContext the evaluationContext to set
-	 */
-	@Element(required = false)
-	@Deprecated
-	public void setEvaluationContext(EvaluationContext evaluationContext) {
-		this.evaluationContext = evaluationContext;
 	}
 	
 	/**
