@@ -87,6 +87,8 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	
 	private static Concept falseConcept;
 	
+	private static Concept unknownConcept;
+	
 	/**
 	 * @see org.openmrs.api.ConceptService#setConceptDAO(org.openmrs.api.db.ConceptDAO)
 	 */
@@ -435,7 +437,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	@Deprecated
 	@Transactional(readOnly = true)
 	public List<Concept> getConcepts(String sortBy, String dir) throws APIException {
-		boolean asc = true ? dir.equals("asc") : !dir.equals("asc");
+		boolean asc = true ? "asc".equals(dir) : !"asc".equals(dir);
 		return Context.getConceptService().getAllConcepts(sortBy, asc, true);
 	}
 	
@@ -476,7 +478,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 		Concept c = null;
 		Integer conceptId = null;
 		try {
-			conceptId = new Integer(conceptIdOrName);
+			conceptId = Integer.valueOf(conceptIdOrName);
 		}
 		catch (NumberFormatException nfe) {
 			conceptId = null;
@@ -518,7 +520,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 		Integer drugId = null;
 		
 		try {
-			drugId = new Integer(drugNameOrId);
+			drugId = Integer.valueOf(drugNameOrId);
 		}
 		catch (NumberFormatException nfe) {
 			drugId = null;
@@ -599,7 +601,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	@Transactional(readOnly = true)
 	public List<Drug> getDrugs(Concept concept, boolean includeRetired) {
 		if (includeRetired == true) {
-			throw new APIException("Getting retired drugs is no longer an options.  Use the getAllDrugs() method for that");
+			throw new APIException("ConceptDrug.retired.getting", (Object[]) null);
 		}
 		
 		return Context.getConceptService().getDrugsByConcept(concept);
@@ -623,7 +625,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	@Transactional(readOnly = true)
 	public List<Drug> findDrugs(String phrase, boolean includeRetired) {
 		if (includeRetired == true) {
-			throw new APIException("Getting retired drugs is no longer an options.  Use the getAllDrugs() method for that");
+			throw new APIException("ConceptDrug.retired.getting", (Object[]) null);
 		}
 		
 		return Context.getConceptService().getDrugs(phrase);
@@ -954,7 +956,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 		}
 		
 		if (mappedConcept == null) {
-			throw new APIException("Illegal Mapped Concept");
+			throw new APIException("Concept.mapped.illegal", (Object[]) null);
 		}
 		
 		ConceptName conceptName = null;
@@ -1103,7 +1105,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	public void checkIfLocked() throws ConceptsLockedException {
 		String locked = Context.getAdministrationService().getGlobalProperty(
 		    OpenmrsConstants.GLOBAL_PROPERTY_CONCEPTS_LOCKED, "false");
-		if (locked.toLowerCase().equals("true")) {
+		if ("true".equalsIgnoreCase(locked)) {
 			throw new ConceptsLockedException();
 		}
 	}
@@ -1353,7 +1355,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 		// sorted to the front of the list, we can test if there is more than one retired concept
 		// by testing if the second concept in the list is retired or not
 		else if (concepts.size() > 1 && !concepts.get(1).isRetired()) {
-			throw new APIException("Multiple non-retired concepts found for mapping " + code + " from source " + sourceName);
+			throw new APIException("Concept.error.multiple.non.retired", new Object[] { code, sourceName });
 		} else {
 			return concepts.get(0);
 		}
@@ -1401,6 +1403,26 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 		}
 		
 		return trueConcept;
+	}
+	
+	/**
+	 * @see org.openmrs.api.ConceptService#getUnknownConcept()
+	 */
+	@Override
+	@Transactional(readOnly = true)
+	public Concept getUnknownConcept() {
+		if (unknownConcept == null) {
+			try {
+				unknownConcept = Context.getConceptService().getConcept(
+				    Integer.parseInt(Context.getAdministrationService().getGlobalProperty(
+				        OpenmrsConstants.GLOBAL_PROPERTY_UNKNOWN_CONCEPT)));
+			}
+			catch (NumberFormatException e) {
+				log.warn("Concept id for unknown concept should be a number");
+			}
+		}
+		
+		return unknownConcept;
 	}
 	
 	/**
@@ -1492,7 +1514,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	public void convertBooleanConceptToCoded(Concept conceptToChange) throws APIException {
 		if (conceptToChange != null) {
 			if (!conceptToChange.getDatatype().isBoolean()) {
-				throw new APIException("Invalid datatype of the concept to convert, should be Boolean");
+				throw new APIException("Concept.datatype.invalid", (Object[]) null);
 			}
 			
 			conceptToChange.setDatatype(getConceptDatatypeByName("Coded"));
@@ -1586,7 +1608,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 			return dao.saveConceptStopWord(conceptStopWord);
 		}
 		catch (DAOException e) {
-			if (e.getMessage().equalsIgnoreCase("Duplicate ConceptStopWord Entry")) {
+			if ("Duplicate ConceptStopWord Entry".equalsIgnoreCase(e.getMessage())) {
 				throw new ConceptStopWordException("ConceptStopWord.duplicated", e);
 			}
 			throw new ConceptStopWordException("ConceptStopWord.notSaved", e);
@@ -1838,7 +1860,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	@Override
 	public void purgeConceptMapType(ConceptMapType conceptMapType) throws APIException {
 		if (dao.isConceptMapTypeInUse(conceptMapType)) {
-			throw new APIException(Context.getMessageSourceService().getMessage("ConceptMapType.inUse"));
+			throw new APIException("ConceptMapType.inUse", (Object[]) null);
 		}
 		dao.deleteConceptMapType(conceptMapType);
 	}
@@ -1940,7 +1962,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	@Override
 	public void purgeConceptReferenceTerm(ConceptReferenceTerm conceptReferenceTerm) throws APIException {
 		if (dao.isConceptReferenceTermInUse(conceptReferenceTerm)) {
-			throw new APIException(Context.getMessageSourceService().getMessage("ConceptRefereceTerm.inUse"));
+			throw new APIException("ConceptRefereceTerm.inUse", (Object[]) null);
 		}
 		dao.deleteConceptReferenceTerm(conceptReferenceTerm);
 	}
@@ -2029,7 +2051,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	        Collection<ConceptMapType> withAnyOfTheseTypes, boolean includeRetired) throws APIException {
 		
 		if (conceptSource == null) {
-			throw new APIException("ConceptSource is required");
+			throw new APIException("ConceptSource.is.required", (Object[]) null);
 		}
 		if (withAnyOfTheseTypes == null) {
 			withAnyOfTheseTypes = Collections.emptyList();
@@ -2046,7 +2068,7 @@ public class ConceptServiceImpl extends BaseOpenmrsService implements ConceptSer
 	public Drug getDrugByMapping(String code, ConceptSource conceptSource,
 	        Collection<ConceptMapType> withAnyOfTheseTypesOrOrderOfPreference) throws APIException {
 		if (conceptSource == null) {
-			throw new APIException("ConceptSource is required");
+			throw new APIException("ConceptSource.is.required", (Object[]) null);
 		}
 		if (withAnyOfTheseTypesOrOrderOfPreference == null) {
 			withAnyOfTheseTypesOrOrderOfPreference = Collections.emptyList();
