@@ -13,8 +13,6 @@
  */
 package org.openmrs.util;
 
-import java.beans.IntrospectionException;
-import java.beans.PropertyDescriptor;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
@@ -58,9 +56,7 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Random;
 import java.util.Set;
-import java.util.SortedSet;
 import java.util.StringTokenizer;
-import java.util.TreeSet;
 import java.util.Vector;
 import java.util.jar.JarFile;
 import java.util.regex.Matcher;
@@ -108,8 +104,6 @@ import org.openmrs.api.PatientService;
 import org.openmrs.api.ShortPasswordException;
 import org.openmrs.api.WeakPasswordException;
 import org.openmrs.api.context.Context;
-import org.openmrs.cohort.CohortSearchHistory;
-import org.openmrs.logic.LogicCriteria;
 import org.openmrs.module.ModuleException;
 import org.openmrs.module.ModuleFactory;
 import org.openmrs.patient.IdentifierValidator;
@@ -122,12 +116,6 @@ import org.openmrs.propertyeditor.LocationEditor;
 import org.openmrs.propertyeditor.PersonAttributeTypeEditor;
 import org.openmrs.propertyeditor.ProgramEditor;
 import org.openmrs.propertyeditor.ProgramWorkflowStateEditor;
-import org.openmrs.report.EvaluationContext;
-import org.openmrs.reporting.CohortFilter;
-import org.openmrs.reporting.PatientFilter;
-import org.openmrs.reporting.PatientSearch;
-import org.openmrs.reporting.PatientSearchReportObject;
-import org.openmrs.reporting.SearchArgument;
 import org.openmrs.xml.OpenmrsCycleStrategy;
 import org.simpleframework.xml.Serializer;
 import org.simpleframework.xml.load.Persister;
@@ -917,7 +905,7 @@ public class OpenmrsUtil {
 				Integer conceptId = null;
 				
 				try {
-					conceptId = new Integer(token);
+					conceptId = Integer.valueOf(token);
 				}
 				catch (NumberFormatException nfe) {
 					conceptId = null;
@@ -970,7 +958,7 @@ public class OpenmrsUtil {
 		Integer conceptId = null;
 		
 		try {
-			conceptId = new Integer(idOrName);
+			conceptId = Integer.valueOf(idOrName);
 		}
 		catch (NumberFormatException nfe) {
 			conceptId = null;
@@ -1365,7 +1353,7 @@ public class OpenmrsUtil {
 		}
 		
 		if (!folder.isDirectory()) {
-			throw new APIException("'" + folder.getAbsolutePath() + "' should be a directory but it is not");
+			throw new APIException("should.be.directory", new Object[] { folder.getAbsolutePath() });
 		}
 		
 		return folder;
@@ -1638,14 +1626,6 @@ public class OpenmrsUtil {
 	}
 	
 	/**
-	 * @deprecated see reportingcompatibility module
-	 */
-	@Deprecated
-	public static PatientFilter toPatientFilter(PatientSearch search, CohortSearchHistory history) {
-		return toPatientFilter(search, history, null);
-	}
-	
-	/**
 	 * Takes a String (e.g. a user-entered one) and parses it into an object of the specified class
 	 * 
 	 * @param string
@@ -1735,224 +1715,6 @@ public class OpenmrsUtil {
 		catch (Exception ex) {
 			log.error("error converting \"" + string + "\" to " + clazz, ex);
 			throw new IllegalArgumentException(ex);
-		}
-	}
-	
-	/**
-	 * Uses reflection to translate a PatientSearch into a PatientFilter
-	 * 
-	 * @deprecated see reportingcompatibility module
-	 */
-	@SuppressWarnings("unchecked")
-	@Deprecated
-	public static PatientFilter toPatientFilter(PatientSearch search, CohortSearchHistory history,
-	        EvaluationContext evalContext) {
-		if (search.isSavedSearchReference()) {
-			PatientSearch ps = ((PatientSearchReportObject) Context.getReportObjectService().getReportObject(
-			    search.getSavedSearchId())).getPatientSearch();
-			return toPatientFilter(ps, history, evalContext);
-		} else if (search.isSavedFilterReference()) {
-			return Context.getReportObjectService().getPatientFilterById(search.getSavedFilterId());
-		} else if (search.isSavedCohortReference()) {
-			Cohort c = Context.getCohortService().getCohort(search.getSavedCohortId());
-			// to prevent lazy loading exceptions, cache the member ids here
-			if (c != null) {
-				c.getMemberIds().size();
-			}
-			return new CohortFilter(c);
-		} else if (search.isComposition()) {
-			if (history == null && search.requiresHistory()) {
-				throw new IllegalArgumentException("You can't evaluate this search without a history");
-			} else {
-				return search.cloneCompositionAsFilter(history, evalContext);
-			}
-		} else {
-			Class clz = search.getFilterClass();
-			if (clz == null) {
-				throw new IllegalArgumentException("search must be saved, composition, or must have a class specified");
-			}
-			log.debug("About to instantiate " + clz);
-			PatientFilter pf = null;
-			try {
-				pf = (PatientFilter) clz.newInstance();
-			}
-			catch (Exception ex) {
-				log.error("Couldn't instantiate a " + search.getFilterClass(), ex);
-				return null;
-			}
-			Class[] stringSingleton = { String.class };
-			if (search.getArguments() != null) {
-				for (SearchArgument sa : search.getArguments()) {
-					if (log.isDebugEnabled()) {
-						log.debug("Looking at (" + sa.getPropertyClass() + ") " + sa.getName() + " -> " + sa.getValue());
-					}
-					PropertyDescriptor pd = null;
-					try {
-						pd = new PropertyDescriptor(sa.getName(), clz);
-					}
-					catch (IntrospectionException ex) {
-						log.error("Error while examining property " + sa.getName(), ex);
-						continue;
-					}
-					Class<?> realPropertyType = pd.getPropertyType();
-					
-					// instantiate the value of the search argument
-					String valueAsString = sa.getValue();
-					String testForExpression = search.getArgumentValue(sa.getName());
-					if (testForExpression != null) {
-						log.debug("Setting " + sa.getName() + " to: " + testForExpression);
-						if (evalContext != null && EvaluationContext.isExpression(testForExpression)) {
-							Object evaluated = evalContext.evaluateExpression(testForExpression);
-							if (evaluated != null) {
-								if (evaluated instanceof Date) {
-									valueAsString = Context.getDateFormat().format((Date) evaluated);
-								} else {
-									valueAsString = evaluated.toString();
-								}
-							}
-							log.debug("Evaluated " + sa.getName() + " to: " + valueAsString);
-						}
-					}
-					
-					Object value = null;
-					Class<?> valueClass = sa.getPropertyClass();
-					try {
-						// If there's a valueOf(String) method, just use that
-						// (will cover at least String, Integer, Double,
-						// Boolean)
-						Method valueOfMethod = null;
-						try {
-							valueOfMethod = valueClass.getMethod("valueOf", stringSingleton);
-						}
-						catch (NoSuchMethodException ex) {}
-						if (valueOfMethod != null) {
-							Object[] holder = { valueAsString };
-							value = valueOfMethod.invoke(pf, holder);
-						} else if (realPropertyType.isEnum()) {
-							// Special-case for enum types
-							List<Enum> constants = Arrays.asList((Enum[]) realPropertyType.getEnumConstants());
-							for (Enum e : constants) {
-								if (e.toString().equals(valueAsString)) {
-									value = e;
-									break;
-								}
-							}
-						} else if (String.class.equals(valueClass)) {
-							value = valueAsString;
-						} else if (Location.class.equals(valueClass)) {
-							LocationEditor ed = new LocationEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Concept.class.equals(valueClass)) {
-							ConceptEditor ed = new ConceptEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Program.class.equals(valueClass)) {
-							ProgramEditor ed = new ProgramEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (ProgramWorkflowState.class.equals(valueClass)) {
-							ProgramWorkflowStateEditor ed = new ProgramWorkflowStateEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (EncounterType.class.equals(valueClass)) {
-							EncounterTypeEditor ed = new EncounterTypeEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Form.class.equals(valueClass)) {
-							FormEditor ed = new FormEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Drug.class.equals(valueClass)) {
-							DrugEditor ed = new DrugEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (PersonAttributeType.class.equals(valueClass)) {
-							PersonAttributeTypeEditor ed = new PersonAttributeTypeEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Cohort.class.equals(valueClass)) {
-							CohortEditor ed = new CohortEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Date.class.equals(valueClass)) {
-							// TODO: this uses the date format from the current
-							// session, which could cause problems if the user
-							// changes it after searching.
-							DateFormat df = Context.getDateFormat(); // new
-							// SimpleDateFormat(OpenmrsConstants.OPENMRS_LOCALE_DATE_PATTERNS().get(Context.getLocale().toString().toLowerCase()),
-							// Context.getLocale());
-							CustomDateEditor ed = new CustomDateEditor(df, true, 10);
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (LogicCriteria.class.equals(valueClass)) {
-							value = Context.getLogicService().parseString(valueAsString);
-						} else {
-							// TODO: Decide whether this is a hack. Currently
-							// setting Object arguments with a String
-							value = valueAsString;
-						}
-					}
-					catch (Exception ex) {
-						log.error("error converting \"" + valueAsString + "\" to " + valueClass, ex);
-						continue;
-					}
-					
-					if (value != null) {
-						
-						if (realPropertyType.isAssignableFrom(valueClass)) {
-							log.debug("setting value of " + sa.getName() + " to " + value);
-							try {
-								pd.getWriteMethod().invoke(pf, value);
-							}
-							catch (Exception ex) {
-								log.error(
-								    "Error setting value of " + sa.getName() + " to " + sa.getValue() + " -> " + value, ex);
-								continue;
-							}
-						} else if (Collection.class.isAssignableFrom(realPropertyType)) {
-							log.debug(sa.getName() + " is a Collection property");
-							// if realPropertyType is a collection, add this
-							// value to it (possibly after instantiating)
-							try {
-								Collection collection = (Collection) pd.getReadMethod().invoke(pf, (Object[]) null);
-								if (collection == null) {
-									// we need to instantiate this collection.
-									// I'm going with the following rules, which
-									// should be rethought:
-									// SortedSet -> TreeSet
-									// Set -> HashSet
-									// Otherwise -> ArrayList
-									if (SortedSet.class.isAssignableFrom(realPropertyType)) {
-										collection = new TreeSet();
-										log.debug("instantiated a TreeSet");
-										pd.getWriteMethod().invoke(pf, collection);
-									} else if (Set.class.isAssignableFrom(realPropertyType)) {
-										collection = new HashSet();
-										log.debug("instantiated a HashSet");
-										pd.getWriteMethod().invoke(pf, collection);
-									} else {
-										collection = new ArrayList();
-										log.debug("instantiated an ArrayList");
-										pd.getWriteMethod().invoke(pf, collection);
-									}
-								}
-								collection.add(value);
-							}
-							catch (Exception ex) {
-								log.error("Error instantiating collection for property " + sa.getName() + " whose class is "
-								        + realPropertyType, ex);
-								continue;
-							}
-						} else {
-							log.error(pf.getClass() + " . " + sa.getName() + " should be " + realPropertyType
-							        + " but is given as " + valueClass);
-						}
-					}
-				}
-			}
-			log.debug("Returning " + pf);
-			return pf;
 		}
 	}
 	
